# fastbuild

./: .gitignore  LICENSE  README.md  meson.build  readme.md
.github/workflows/: release.yml
completions/: fastbuild.fish
include/: common.hpp  file_watcher.hpp  project_generator.hpp  system_check.hpp  template_manager.hpp  template_registry.hpp
scripts/: install.sh
src/: file_watcher.cpp  main.cpp  project_generator.cpp
